--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "backbone": "^1.3.3",
+    "body-parser": "^1.12.4",
+    "cookie-parser": "^1.3.5",
+    "debug": "^2.2.0",
+    "ejs": "^2.5.2",
+    "express": "~4.12.4",
     "jquery": "^3.1.1",
+    "morgan": "^1.5.3",
+    "serve-favicon": "^2.2.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
