--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^2.5.2",
     "express": "~4.12.4",
     "jquery": "^3.1.1",
+    "mongodb": "^2.2.10",
+    "mongoose": "^4.6.1",
     "morgan": "^1.5.3",
     "serve-favicon": "^2.2.1",
     "underscore": "^1.8.3"
