--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "body-parser": "^1.12.4",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
+    "dotenv": "^2.0.0",
     "ejs": "^2.5.2",
     "express": "~4.12.4",
     "jquery": "^3.1.1",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.1",
     "morgan": "^1.5.3",
+    "pusher": "^1.5.0",
     "serve-favicon": "^2.2.1",
     "underscore": "^1.8.3"
   },
