--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "body-parser": "^1.12.4",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
